--- a/HeyBabe.FunctionApp/package.json
+++ b/HeyBabe.FunctionApp/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@azure/functions": "^3.0.0",
     "@types/node": "^16.x",
+    "@types/uuid": "^9.0.0",
     "typescript": "^4.0.0"
   },
   "dependencies": {
